--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Kavivanar" rel="stylesheet">
+		<link rel="icon" type="image/png" href="./assets/images/avatar-2.ico" sizes="16x16">
 		<style>
             @font-face {
                 font-family: "usuzi";
